[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( -8, 0 ), Vector2( -216, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 216, 0 ), Vector2( 424, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( -216, 0 ), Vector2( -8, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 424, 0 ), Vector2( 216, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fadein"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}

[node name="main" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="levels" type="Node2D" parent="."]

[node name="fade_layer" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 10

[node name="fadeanim" type="AnimationPlayer" parent="fade_layer"]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="left" type="Polygon2D" parent="fade_layer"]
position = Vector2( -216, 0 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -16, -16, 208, -16, 208, 256, -16, 256 )

[node name="right" type="Polygon2D" parent="fade_layer"]
position = Vector2( 424, 0 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -16, -16, 208, -16, 208, 256, -16, 256 )

[node name="loadtimer" type="Timer" parent="."]
one_shot = true

[node name="music" type="AudioStreamPlayer" parent="."]
editor/display_folded = true
volume_db = -60.0
bus = "music"

[node name="musicfade" type="AnimationPlayer" parent="music"]
anims/fadein = SubResource( 3 )
anims/fadeout = SubResource( 4 )
[connection signal="timeout" from="loadtimer" to="." method="_on_loadtimer_timeout"]
[connection signal="animation_finished" from="music/musicfade" to="." method="_on_musicfade_animation_finished"]
